--- a/Movies/Pages/Index.cshtml
+++ b/Movies/Pages/Index.cshtml
@@ -4,4 +4,58 @@
     ViewData["Title"] = "Home page";
 }
 
-<h1>Hello World</h1>
+<h1>Movies</h1>
+<div id="container">
+
+    <div>
+        @foreach (Movie movie in Model.Movies)
+        {
+            <div class="movie-entry">
+                <h2>@movie.Title<smaller> (@(movie.MPAA_Rating == null ? "Not Avaliable" : movie.MPAA_Rating))</smaller></h2>
+                <i>@movie.Major_Genre</i>
+                <div class="ratings">
+                    <div>
+                        Rotten Tomatoes
+                        <h3>@(movie.Rotten_Tomatoes_Rating == null ? "N/A" : movie.Rotten_Tomatoes_Rating.ToString())</h3>
+                    </div>
+                    <div>
+                        IMDB
+                        <h3>@(movie.IMDB_Rating == null ? "N/A" : movie.IMDB_Rating.ToString())</h3>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+
+    <div id="results">
+        <form method="post">
+            <input type="text" name="search" id="search" />
+            <input type="submit" value="Search" />
+
+            <h2>MPAA Rating</h2>
+            <label>
+                <input type="checkbox" name="rating" value="G" />
+                Rated G
+            </label>
+            <label>
+                <input type="checkbox" name="rating" value="PG" />
+                Rated PG
+            </label>
+            <label>
+                <input type="checkbox" name="rating" value="PG-13" />
+                Rated PG-13
+            </label>
+            <label>
+                <input type="checkbox" name="rating" value="R" />
+                Rated R
+            </label>
+            <label>
+                <input type="checkbox" name="rating" value="NC-17" />
+                Rated NC-17
+            </label>
+
+        </form>
+    </div>
+
+
+</div>
