--- a/Movies/wwwroot/css/site.css
+++ b/Movies/wwwroot/css/site.css
@@ -1,2 +1,26 @@
-/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification 
-for details on configuring this project to bundle and minify static web assets. */
+#container{
+    display: flex;
+    flex-direction: row;
+}
+
+form{
+    background-color: lightgray;
+}
+
+.movie-entry{
+    border-bottom: 1px dashed black;
+    margin: 5px;
+    padding-bottom: 10px;
+}
+
+.movie-entry h2{
+    margin-bottom: 0px;
+}
+
+.movie-entry .ratings > div{
+    display: flex;
+    flex-direction: row;
+    border: 1px solid black;
+    text-align: center;
+    width: 150px;
+}
