--- a/Movies/wwwroot/css/site.css
+++ b/Movies/wwwroot/css/site.css
@@ -5,6 +5,13 @@
 
 form{
     background-color: lightgray;
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    right: 20px;
+    padding: 5px;
+    
 }
 
 .movie-entry{
